* Do not allow message subjects to wrap, if the length happens to exceed the table cell width even after our usual truncation. * Also removed the grey lines between each message.  With the alternating grey bars in place this is no longer needed.

--- a/webcit/static/webcit.css
+++ b/webcit/static/webcit.css
@@ -273,8 +273,14 @@ body {
 	font-style: italic;
 }
 
-.mimepart dl dd,.mailbox_summary td, .mimepart dl dt {
+.mimepart dl dd, .mimepart dl dt {
 	border-top: 1px solid #AAA;
+}
+
+.mailbox_summary td {
+	/* border-top: 1px solid #AAA; */
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .mimepart dl dt {
